--- a/index.html
+++ b/index.html
@@ -165,9 +165,14 @@
 <body>
     <header>
         <h1>IT (Network)</h1>
-        <span class="version">V2.1</span> </header>
+        <span class="version">V1.0</span> </header>
 
     <main class="grid-container">
+	<a href="Subject.html" class="card">
+    	     <h2>Subject</h2>
+    	     <p>انقر هنا لفتح المجلد على Google Drive</p>
+        </a>
+
         <a href="AI/index.html" class="card">
             <h2>AI</h2>
             <p>انقر هنا لبدء اختبار الذكاء الاصطناعي</p>
@@ -200,7 +205,3 @@
     </main>
 </body>
 </html>
-
-
-
-
