--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
     	     <h2>Subject</h2>
     	     <p>انقر هنا لفتح المجلد على Google Drive</p>
         </a>
+	<a href="https://batechu.it-club.top/lms/login" class="card">
+    		<h2>LMS</h2>
+    		<p>انقر هنا لتسجيل الدخول إلى منصة LMS</p>
+	</a>
 
         <a href="AI/index.html" class="card">
             <h2>AI</h2>
