--- a/Subject.html
+++ b/Subject.html
@@ -109,14 +109,14 @@
       <p>مادة الذكاء الاصطناعي</p>
     </a>
 
-    <a class="card" href="preview.html?folder=1p2ODrNPbsP-ZjzSxMJDQiiopY0vZg8kb&name=CCNA%20R%26S%20IV">
+    <a class="card" href="preview.html?folder=17iw73ZKs2FmX8m6XO3AF17kjNqKzQPj5&name=CCNA%20R%26S%20IV">
       <h2>CCNA R&S IV</h2>
       <p>مادة شبكات CCNA R&S IV</p>
     </a>
 
-    <a class="card" href="preview.html?folder=17iw73ZKs2FmX8m6XO3AF17kjNqKzQPj5&name=Cybersecurity">
-      <h2>Cybersecurity</h2>
-      <p>مادة الأمن السيبراني</p>
+    <a class="card" href="preview.html?folder=1p2ODrNPbsP-ZjzSxMJDQiiopY0vZg8kb&name=CCNA%20Cybersecurity%20Operations">
+      <h2>CCNA Cybersecurity</h2>
+      <p>مادة الأمن السيبراني في CCNA</p>
     </a>
 
     <a class="card" href="preview.html?folder=1_l8NNmu5Ot_S1Ddfz0cqcG8PRlKe65dt&name=Encryption%20Algorithm">
